--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -54,16 +54,16 @@ jobs:
           build_path: target # build artifact(s) directory
           s3_bucket: codeguru-reviewer-aritras-actions-bucket  # S3 Bucket with "codeguru-reviewer-*" prefix
 
-      #- name: Upload review result
-      #  uses: github/codeql-action/upload-sarif@v1
-      #  with:
-      #    sarif_file: codeguru-results.sarif.json
-      
-      - name: 'Upload Artifact'
-        uses: actions/upload-artifact@v2
+      - name: Upload review result
+        uses: github/codeql-action/upload-sarif@v1
         with:
-          name: sarif_results
-          path: codeguru-results*.json
+          sarif_file: codeguru-results.sarif.json
+      
+      #- name: 'Upload Artifact'
+      #  uses: actions/upload-artifact@v2
+      #  with:
+      #    name: sarif_results
+      #    path: codeguru-results*.json
 
       - run: echo "🍏 This job's status is ${{ job.status }}."
 
