--- a/.github/workflows/external-sarif-upload.yml
+++ b/.github/workflows/external-sarif-upload.yml
@@ -20,4 +20,4 @@ jobs:
         uses: github/codeql-action/upload-sarif@v1
         with:
           # Path to SARIF file relative to the root of the repository
-          sarif_file: sarif-output
+          sarif_file: sarif-ouput
